--- a/I Am Rich/I Am Rich/Base.lproj/Main.storyboard
+++ b/I Am Rich/I Am Rich/Base.lproj/Main.storyboard
@@ -18,15 +18,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I Am Rich" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fd-MI-ppq">
-                                <rect key="frame" x="108" y="100" width="160" height="50"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I Am Rich" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fd-MI-ppq">
+                                <rect key="frame" x="109" y="100" width="158.5" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="j2X-xm-kWa"/>
+                                    <constraint firstAttribute="width" constant="158.5" id="rak-kl-SLC"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="40"/>
                                 <color key="textColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond" translatesAutoresizingMaskIntoConstraints="NO" id="MoK-td-Bsa">
+                                <rect key="frame" x="53" y="250" width="270" height="270"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="270" id="4Cn-Ev-sZg"/>
+                                    <constraint firstAttribute="height" constant="270" id="axE-zD-Tyc"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.20392156862745098" green="0.28627450980392155" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="1fd-MI-ppq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="8FL-Ms-EME"/>
+                            <constraint firstItem="MoK-td-Bsa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FNl-TR-pp9"/>
+                            <constraint firstItem="MoK-td-Bsa" firstAttribute="top" secondItem="1fd-MI-ppq" secondAttribute="bottom" constant="100" id="H1m-BB-kh1"/>
+                            <constraint firstItem="1fd-MI-ppq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WfP-gV-FRB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -34,4 +50,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="diamond" width="515" height="377"/>
+    </resources>
 </document>
